--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dotenv": "^16.5.0",
     "install": "^0.13.0",
     "mysql2": "^3.14.0",
-    "npm": "^11.3.0",
-    "venom-bot": "^5.3.0"
+    "npm": "^11.3.0"
   }
 }
