--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@wppconnect-team/wppconnect": "^1.37.0",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "install": "^0.13.0",
     "mysql2": "^3.14.0",
     "npm": "^11.3.0"
